WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277154
[CSS Quotes] Some CSS properties cause quotes to be reset
https://bugs.webkit.org/show_bug.cgi?id=277154
Summary
[CSS Quotes] Some CSS properties cause quotes to be reset
Tim Nguyen (:ntim)
Reported
2024-07-26 11:21:34 PDT
<style> q { quotes: "start" "end"; text-shadow: red 2px 2px } </style><q><q></q></q> `text-shadow` / `stroke-width` / `text-underline-position` are the properties I've gathered so far.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-26 11:21:46 PDT
<
rdar://problem/132585704
>
Tim Nguyen (:ntim)
Comment 2
2024-07-26 13:18:12 PDT
Another reproducible testcase: <style> q { quotes: "start" "end"; } q > q { stroke-width: 2px; } </style><q><q></q></q>
Tim Nguyen (:ntim)
Comment 3
2024-07-26 17:23:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31331
Tim Nguyen (:ntim)
Comment 4
2024-07-26 17:28:25 PDT
***
Bug 182639
has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 5
2024-07-26 17:31:53 PDT
***
Bug 260425
has been marked as a duplicate of this bug. ***
EWS
Comment 6
2024-07-26 22:47:43 PDT
Committed
281444@main
(1dd5907b5b49): <
https://commits.webkit.org/281444@main
> Reviewed commits have been landed. Closing PR #31331 and removing active labels.
EWS
Comment 7
2024-07-29 14:12:05 PDT
Committed
280938.147@safari-7619-branch
(af4b5aecf002): <
https://commits.webkit.org/280938.147@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1511 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug