[CSS Quotes] Some CSS properties cause quotes to be reset https://bugs.webkit.org/show_bug.cgi?id=277154 rdar://132585704

Reviewed by Simon Fraser.

Some RenderStyle setters trigger copy-on-write, so the copy constructors need to be accurate.

In this case, quotes were not being copied over.

To avoid future similar issues, add ASSERTs to the copy constructors for classes that RenderStyle directly refers too.

* LayoutTests/fast/css/quotes-with-text-shadow-expected.html: Added.
* LayoutTests/fast/css/quotes-with-text-shadow.html: Added.
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::setQuotes): Use arePointingToEqualData as it's easier to read and equivalent.
* Source/WebCore/rendering/style/SVGRenderStyle.cpp:
(WebCore::SVGRenderStyle::SVGRenderStyle):
* Source/WebCore/rendering/style/StyleInheritedData.cpp:
(WebCore::StyleInheritedData::StyleInheritedData):
* Source/WebCore/rendering/style/StyleNonInheritedData.cpp:
(WebCore::StyleNonInheritedData::StyleNonInheritedData):
* Source/WebCore/rendering/style/StyleRareInheritedData.cpp:
(WebCore::StyleRareInheritedData::StyleRareInheritedData):

Canonical link: https://commits.webkit.org/281444@main